--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,23 +8,30 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '0 */3 * * *'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: 环境配置
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          cache: 'npm'
+      - name: 缓存
+        uses: actions/cache@3
+        with:
+          path: node_modules
+      - name: 安装依赖
+        run: npm install
+      - name: 生成 README.md
+        run: npm run build --if-present
+       - name: 推送新 README.md
+       uses: mikeal/publish-to-github-action@master
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
