--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '16.x'
           cache: 'npm'
       - name: 缓存
-        uses: actions/cache@1
+        uses: actions/cache@v3
         with:
           path: node_modules
       - name: 安装依赖
