--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "haixiangyan",
   "version": "1.0.0",
   "description": "<img style=\"width: 50%\" align=\"right\" src=\"https://github-readme-stats.vercel.app/api?username=haixiangyan&show_icons=true&hide_border=true&theme=vue-dark\" />",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "node index.js",
+    "build": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
