--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/haixiangyan/haixiangyan#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "ejs": "^3.1.6",
     "html-prettify": "^1.0.6"
   }
