--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 设置时区
+        uses: szenius/set-timezone@v1.0
+        with:
+          timezoneLinux: 'Asia/Beijing'
+          timezoneMacos: "Asia/Beijing"
+          timezoneWindows: "Asia/Beijing"
       - name: Checkout
         uses: actions/checkout@v3
       - name: 环境配置
